objects/Addresses__c.object
<CustomObject>
    <description>This will store all the addresses related to Customer Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Prospect</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Street__c &amp; &apos; &apos; &amp;   City__c &amp; &apos; &apos; &amp;  State__c &amp; &apos; &apos; &amp;  Country__c &amp; &apos; &apos; &amp;  ZipCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will allow you to identify if the address is billing address</description>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This will be city of the address</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This will store the country of the address</description>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPSystem__c</fullName>
        <description>This will the ERP that address needs to synced with</description>
        <formula>TEXT(Account__r.ERPSystem__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastSyncDate__c</fullName>
        <description>This will store the last sync date from boomi</description>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NetSuiteAddressID__c</fullName>
        <description>This the external key from address from netsuite</description>
        <externalId>true</externalId>
        <label>NetSuite Address ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OracleLocationID__c</fullName>
        <description>This will store the oracle location id corresponding to the site.</description>
        <externalId>true</externalId>
        <label>Oracle Location ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleSiteID__c</fullName>
        <description>This is the site id from from oracle for each location</description>
        <externalId>true</externalId>
        <label>Oracle Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadytobeSynced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked when created and when updated</description>
        <label>Ready to be Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will store the shipping address</description>
        <label>Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This will store the state of the address</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>This will store the street address o</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SyncMessage__c</fullName>
        <description>This will store the error or success from the boomi job</description>
        <label>Sync Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>This is the zip code for the address</description>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <displayFormat>Address-{000000}</displayFormat>
        <label>Addresses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>